--- a/Lab01/99multiplicationTable.ipynb
+++ b/Lab01/99multiplicationTable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -111,7 +111,9 @@
     "for i in range(1,10):\n",
     "    for j in range(1,10):\n",
     "        print(\"{} * {} = {}\".format(i,j,i*j))\n",
-    "    print(\"\")\n"
+    "    print(\"\")\n",
+    "\n",
+    "    \n"
    ]
   }
  ],
