--- a/Lab03/lab3.ipynb
+++ b/Lab03/lab3.ipynb
@@ -86,7 +86,7 @@
     "    for j in range(2,width+2):\n",
     "        #TODO:把內容補完\n",
     "        old = tempArray[i, j]\n",
-    "        new = (old // (255//2))*(255 //(2-1))\n",
+    "        new = (old // 127)*255\n",
     "        tempArray[i,j] = new\n",
     "        E = old -new\n",
     "        tempArray[i:i+3,j-2:j+3] = tempArray[i:i+3,j-2:j+3] +E*errorArray\n",
