--- a/Lab03/lab3.ipynb
+++ b/Lab03/lab3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,9 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "outputs": [],
    "source": [
+    "#Ordered Dithering\n",
+    "#有序抖動法用的矩陣\n",
     "DitherArray=np.array([[0.513,0.272,0.724,0.483,0.543,0.302,0.694,0.453],\n",
     " [0.151,0.755,0.091,0.966,0.181,0.758,0.121,0.936],\n",
     " [0.634,0.392,0.574,0.332,0.664,0.423,0.604,0.362],\n",
@@ -32,27 +34,22 @@
     " [0.543,0.302,0.694,0.453,0.513,0.272,0.724,0.483],\n",
     " [0.181,0.758,0.121,0.936,0.151,0.755,0.091,0.936],\n",
     " [0.664,0.423,0.604,0.362,0.634,0.392,0.574,0.332],\n",
-    " [0.030,0.906,0.241,0.845,0.060,0.875,0.211,0.815]])*255"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [],
-   "source": [
-    "#Ordered Dithering\n",
+    " [0.030,0.906,0.241,0.845,0.060,0.875,0.211,0.815]])*255\n",
+    "\n",
+    "#先複製出一個圖片用來處理(避免干擾到原圖)\n",
+    "#直接等於的話會有點像指標指向圖片\n",
     "theDitheredImage = np.empty_like(theImageGray)\n",
     "theDitheredImage[:]=theImageGray\n",
     "\n",
+    "#取出長寬\n",
     "height,width=theDitheredImage.shape\n",
+    "\n",
+    "'''\n",
+    "主要把影像切成很多8*8大小的矩陣,每8*8做一次處理,每點小於閥值(DitherArray) 就會變0(黑) 反之255(白)\n",
+    "'''\n",
     "for i in range(0,height,8):\n",
     "    for j in range(0,width,8):\n",
+    "        #一次比較8*8的SIZE\n",
     "        theDitheredImage[i:i+8,j:j+8]=(DitherArray<theDitheredImage[i:i+8,j:j+8])*255\n",
     "\n",
     "\n",
@@ -72,29 +69,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#Error Diffusion\n",
+    "\n",
+    "#有錯誤擴散權重的矩陣\n",
     "errorArray=np.array([[0.0,    0.0,     0.0,     0.19040, 0.095230],\n",
     " [0.04762,0.095230,0.19040, 0.095230,0.04762 ],\n",
     " [0.02381,0.047620,0.095230,0.047620,0.02381]])\n",
     "\n",
+    "#先複製出一個圖片用來處理(避免干擾到原圖)\n",
     "theErrorDiffusedImage = np.empty_like(theImageGray)\n",
     "theErrorDiffusedImage[:]=theImageGray\n",
     "\n",
+    "#取出長寬值\n",
     "height,width=theErrorDiffusedImage.shape\n",
     "\n",
+    "'''\n",
+    "因為如果以擴散權重矩陣的中心上方的那個點當作處理點\n",
+    "左,下,右 的與邊界的距離(Padding)都會是2\n",
+    "所以我們在四周都擴增2個單位(長寬都加4)\n",
+    "'''\n",
     "tempArray=np.zeros((height+4,width+4))\n",
+    "\n",
+    "#複製圖片\n",
     "tempArray[2:height+2,2:width+2]=theErrorDiffusedImage\n",
+    "\n",
+    "'''\n",
+    "只要處理矩陣中有實際圖片值的地方就好(2~height+2,2~width+2)\n",
+    "一個點一個點處理\n",
+    "'''\n",
     "for i in range(2,height+2):\n",
     "    for j in range(2,width+2):\n",
+    "        #先把該點舊的值存起來\n",
     "        old = tempArray[i, j]\n",
-    "        new = (old // (255//2))*(255 //(2-1))\n",
+    "        #值超過127就變成255(白) 反之變成0(黑) 結果存成new\n",
+    "        new = (old // (127))*255\n",
+    "        #把該點的值更新\n",
     "        tempArray[i,j] = new\n",
+    "        #計算誤差(與255或0的最短距離)\n",
     "        E = old -new\n",
+    "        #把四周德權重值乘上誤差值 再加到四周\n",
     "        tempArray[i:i+3,j-2:j+3] = tempArray[i:i+3,j-2:j+3] +E*errorArray\n",
     "\n",
+    "#把處理好的照片存出來\n",
     "theErrorDiffusedImage=tempArray[2:height+2,2:width+2]\n",
     "#秀出圖片\n",
     "cv2.imshow(\"theErrorDiffusedImage\", theErrorDiffusedImage)\n",
@@ -111,10 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "#Dot Diffusion\n",
+    "#擴散順序矩陣\n",
     "ClassMatrix=np.array([[204,  0,  5, 33, 51, 59, 23,118, 54, 69, 40,160,169,110,168,188],\n",
     " [  3,  6, 22, 36, 60, 50, 74,115,140, 82,147,164,171,142,220,214],\n",
     " [ 14,  7, 42, 16, 63, 52, 94, 56,133,152,158,177,179,208,222,  1],\n",
@@ -132,39 +152,65 @@
     " [187,192,198,212,  9, 10, 30, 35, 58, 67, 90, 71,122,127,154,161],\n",
     " [199,210,211,  2, 11, 27, 37, 57, 66, 89, 98,121,119,143,162,186]])\n",
     "\n",
+    "#擴散權重矩陣\n",
     "ErrorArray=np.array([[0.38459,1,0.38459],\n",
     "[1,0,1],\n",
     "[0.38459,1,0.38459]])\n",
     "\n",
+    "#先複製出一個圖片用來處理(避免干擾到原圖)\n",
     "theDotDiffusedImage = np.empty_like(theImageGray)\n",
     "theDotDiffusedImage[:]=theImageGray\n",
     "\n",
+    "#取出照片大小\n",
     "height,width=theDotDiffusedImage.shape\n",
+    "\n",
+    "#創造出一個四周有寬度一邊框的擴散順序矩陣(因為把擴散權重矩陣的中心當處理點,四周會有一圈寬度一的邊框)\n",
     "tempClassArray=np.zeros((16+2,16+2))\n",
     "tempClassArray[1:16+1,1:16+1]=ClassMatrix\n",
     "\n",
+    "'''\n",
+    "一次取出16*16開始進行順序擴散\n",
+    "16*16中是從0~255依序處理\n",
+    "'''\n",
     "for i in range(0,height,16):\n",
     "    for j in range(0,width,16):\n",
+    "        #擴充取出的16*16圖片 讓四周有寬度一的邊框(因為把擴散權重矩陣的中心當處理點,四周會有一圈寬度一的邊框)\n",
     "        tempArray=np.zeros((16+2,16+2))\n",
     "        tempArray[1:16+1,1:16+1]=theDotDiffusedImage[i:i+16,j:j+16]\n",
+    "\n",
+    "        #在順序矩陣中依序找到要處理的點\n",
     "        for findNumber in range(0,256):\n",
-    "            tempErrorArray = np.empty_like(ErrorArray)\n",
-    "            tempErrorArray[:]=ErrorArray\n",
+    "            #找到要處理點哦index\n",
     "            result = np.where(ClassMatrix == findNumber)\n",
+    "            #因為找到的東西是兩個ARRAY(對應不同維度) 所以用ZIP把他們合起來\n",
     "            place= list(zip(result[0], result[1]))\n",
+    "\n",
+    "            #利用誤差擴散法的方法\n",
     "            old = tempArray[1+place[0][0],1+place[0][1]]\n",
     "            new = (old // 127)*255\n",
     "            tempArray[1+place[0][0],1+place[0][1]] = new\n",
     "            E = old -new\n",
     "            sum=0\n",
+    "            '''\n",
+    "             和誤差擴散法不同的是 處理過的點不用擴散過去\n",
+    "             所以把四周權順序值小於等於自己的權重值都設為零\n",
+    "             最後再計算新的各點權重值\n",
+    "            '''\n",
+    "            tempErrorArray = np.empty_like(ErrorArray)\n",
+    "            tempErrorArray[:]=ErrorArray\n",
+    "\n",
+    "            #檢差四周(共3*3)\n",
     "            for k in range(-1,2):\n",
     "                for m in range(-1,2):\n",
     "                    if tempClassArray[1+place[0][0]+k,1+place[0][1]+m]<=tempClassArray[1+place[0][0],1+place[0][1]]:\n",
     "                        tempErrorArray[k+1,m+1]=0;\n",
     "                    sum += tempErrorArray[k + 1, m + 1]\n",
+    "            #計算新的各點權重值(權重矩陣的各點和要是1)\n",
     "            if not sum==0:\n",
     "                tempErrorArray = tempErrorArray / sum\n",
+    "            #更新該點及其附近點的值\n",
     "            tempArray[1+place[0][0]-1:1+place[0][0]+2,1+place[0][1]-1:1+place[0][1]+2]= tempArray[1+place[0][0]-1:1+place[0][0]+2,1+place[0][1]-1:1+place[0][1]+2] +E*tempErrorArray\n",
+    "        #把處理好的16*16小區塊填回原圖\n",
     "        theDotDiffusedImage[i:i+16,j:j+16]=tempArray[1:16+1,1:16+1]\n",
     "\n",
     "\n",
