--- a/Lab03/lab3.ipynb
+++ b/Lab03/lab3.ipynb
@@ -72,16 +72,13 @@
    "outputs": [],
    "source": [
     "#Error Diffusion\n",
-    "\n",
     "#有錯誤擴散權重的矩陣\n",
     "errorArray=np.array([[0.0,    0.0,     0.0,     0.19040, 0.095230],\n",
     " [0.04762,0.095230,0.19040, 0.095230,0.04762 ],\n",
     " [0.02381,0.047620,0.095230,0.047620,0.02381]])\n",
-    "\n",
     "#先複製出一個圖片用來處理(避免干擾到原圖)\n",
     "theErrorDiffusedImage = np.empty_like(theImageGray)\n",
     "theErrorDiffusedImage[:]=theImageGray\n",
-    "\n",
     "#取出長寬值\n",
     "height,width=theErrorDiffusedImage.shape\n",
     "\n",
@@ -91,7 +88,6 @@
     "所以我們在四周都擴增2個單位(長寬都加4)\n",
     "'''\n",
     "tempArray=np.zeros((height+4,width+4))\n",
-    "\n",
     "#複製圖片\n",
     "tempArray[2:height+2,2:width+2]=theErrorDiffusedImage\n",
     "\n",
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "#Dot Diffusion\n",
@@ -222,7 +218,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
