--- a/Lab04/lab4.ipynb
+++ b/Lab04/lab4.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x21cc1792850>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x1c704b1fa00>"
      },
-     "execution_count": 158,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -51,39 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "'''\n",
-    "使用scikit-image完成全域直方圖等化\n",
-    "使用scikit-image完成局部直方圖等化\n",
-    "'''\n",
-    "# Global equalize\n",
-    "img_rescale = exposure.equalize_hist(gamma2Pic)\n",
-    "\n",
-    "#Local equalization\n",
-    "selem = disk(30)\n",
-    "img_eq = rank.equalize(gamma2Pic, selem=selem)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "outputs": [],
-   "source": [
+    "#這個函式是用來畫圖表及展示圖片的\n",
     "def plot_img_and_hist(image, axes, bins=256):\n",
     "    \"\"\"Plot an image along with its histogram and cumulative histogram.\n",
-    "\n",
     "    \"\"\"\n",
     "    ax_img, ax_hist = axes\n",
     "    ax_cdf = ax_hist.twinx()\n",
-    "\n",
     "    # Display image\n",
     "    ax_img.imshow(image, cmap=plt.cm.gray)\n",
     "    ax_img.set_axis_off()\n",
@@ -111,7 +87,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\choug\\pycharmprojects\\digitalimageprocessing\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3417: UserWarning: Possible precision loss converting image of type float64 to uint8 as required by rank filters. Convert manually using skimage.util.img_as_ubyte to silence this warning.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "使用scikit-image完成全域直方圖等化\n",
+    "使用scikit-image完成局部直方圖等化\n",
+    "'''\n",
+    "# Global equalize\n",
+    "img_rescale = exposure.equalize_hist(gamma2Pic)\n",
+    "\n",
+    "#Local equalization\n",
+    "selem = disk(30)\n",
+    "img_eq = rank.equalize(gamma2Pic, selem=selem)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -126,15 +134,18 @@
    ],
    "source": [
     "# Display results\n",
+    "#定義圖表大小\n",
     "fig = plt.figure(figsize=(8, 5))\n",
+    "#歸零陣列\n",
     "axes = np.zeros((2, 3), dtype=np.object)\n",
+    "#定義各個圖片的顯示位置\n",
     "axes[0, 0] = plt.subplot(2, 3, 1)\n",
     "axes[0, 1] = plt.subplot(2, 3, 2, sharex=axes[0, 0], sharey=axes[0, 0])\n",
     "axes[0, 2] = plt.subplot(2, 3, 3, sharex=axes[0, 0], sharey=axes[0, 0])\n",
     "axes[1, 0] = plt.subplot(2, 3, 4)\n",
     "axes[1, 1] = plt.subplot(2, 3, 5)\n",
     "axes[1, 2] = plt.subplot(2, 3, 6)\n",
-    "\n",
+    "#秀出圖組\n",
     "ax_img, ax_hist, ax_cdf = plot_img_and_hist(gamma2Pic, axes[:, 0])\n",
     "ax_img.set_title('Low contrast image')\n",
     "ax_hist.set_ylabel('Number of pixels')\n",
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stderr",
@@ -166,7 +177,7 @@
      "text": [
       "c:\\users\\choug\\pycharmprojects\\digitalimageprocessing\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3417: UserWarning: Possible precision loss converting image of type float64 to uint8 as required by rank filters. Convert manually using skimage.util.img_as_ubyte to silence this warning.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "<ipython-input-162-da986d29b7cf>:7: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "<ipython-input-13-1ab6db53089f>:7: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  f.show(plt.hist(img_eq2.flatten(), bins =256))\n"
      ]
     },
@@ -209,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stderr",
@@ -217,7 +228,7 @@
      "text": [
       "c:\\users\\choug\\pycharmprojects\\digitalimageprocessing\\venv\\lib\\site-packages\\skimage\\io\\_plugins\\matplotlib_plugin.py:150: UserWarning: Low image data range; displaying image with stretched contrast.\n",
       "  lo, hi, cmap = _get_display_range(image)\n",
-      "<ipython-input-163-43c639a4232c>:34: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "<ipython-input-14-bdfc08e38731>:34: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  f.show(plt.hist(EqualizedImage.flatten(), bins =256))\n"
      ]
     },
@@ -251,14 +262,14 @@
     "EqualizedImage[:]=gamma2Pic*255\n",
     "EqualizedImage=EqualizedImage.astype(int)\n",
     "numCounter={}\n",
-    "\n",
+    "#利用DICT紀錄各個數值出現的次數\n",
     "for i in range(height):\n",
     "    for j in range(width):\n",
     "        if EqualizedImage[i,j] not in numCounter:\n",
     "            numCounter[EqualizedImage[i,j]]=1\n",
     "        else:\n",
     "            numCounter[EqualizedImage[i,j]]+=1\n",
-    "\n",
+    "#利用LIST和鋼材的DICT內容建立CDF(累積分布函數)\n",
     "cdf=[]\n",
     "cdf.append(0 if 0 not in numCounter else numCounter.get(0))\n",
     "for i in range(1,256):\n",
@@ -266,17 +277,19 @@
     "        cdf.append(cdf[i-1]+numCounter.get(i))\n",
     "    else:\n",
     "        cdf.append(cdf[i-1])\n",
-    "\n",
+    "#找到CDF的最大最小值\n",
     "cdfMax=max(cdf)\n",
     "cdfMin=min(cdf)\n",
     "\n",
+    "#把原圖擴張到0-255\n",
     "for i in range(height):\n",
     "    for j in range(width):\n",
     "        EqualizedImage[i][j]=((cdf[EqualizedImage[i][j]]-cdfMin)/(cdfMax-cdfMin))*255\n",
-    "\n",
+    "#秀出圖片和圖表\n",
     "io.imshow(EqualizedImage,cmap='gray')\n",
     "f= plt.figure()\n",
-    "f.show(plt.hist(EqualizedImage.flatten(), bins =256))\n"
+    "f.show(plt.hist(EqualizedImage.flatten(), bins =256))\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
